# mailing-service

./: .env.example  README.md  main.py  pyproject.toml
apps/mailings/: admin.py  apps.py  exceptions.py  models.py  services.py  tasks.py  utils.py
apps/mailings/management/commands/: import_mailings.py  test_mailings.xlsx
apps/mailings/migrations/: 0001_initial.py  0002_mailing_is_sent.py
apps/mailings/tests/: factories.py  test_service.py
config/: settings.py  wsgi.py
